crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@80.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO T SELECT b, b - 10 FROM generate_series(11, 20) a(b);"
---
InsertStmt@0..65
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "T"
  Whitespace@13..14 " "
  SelectStmt@14..63
    Select@14..20 "SELECT"
    Whitespace@20..21 " "
    ResTarget@21..22
      ColumnRef@21..22
        Ident@21..22 "b"
    Ascii44@22..23 ","
    Whitespace@23..24 " "
    ResTarget@24..30
      AExpr@24..30
        ColumnRef@24..25
          Ident@24..25 "b"
        Whitespace@25..26 " "
        Ascii45@26..27 "-"
        Whitespace@27..28 " "
        AConst@28..30
          Iconst@28..30 "10"
    Whitespace@30..31 " "
    From@31..35 "FROM"
    Whitespace@35..36 " "
    RangeFunction@36..63
      List@36..58
        FuncCall@36..58
          Ident@36..51 "generate_series"
          Ascii40@51..52 "("
          AConst@52..54
            Iconst@52..54 "11"
          Ascii44@54..55 ","
          Whitespace@55..56 " "
          AConst@56..58
            Iconst@56..58 "20"
      Ascii41@58..59 ")"
      Whitespace@59..60 " "
      Alias@60..63
        Ident@60..61 "a"
        Ascii40@61..62 "("
        Ident@62..63 "b"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

