crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@82.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO T SELECT b, b - 10, (b + 10)::text FROM generate_series(21, 30) a(b);"
---
InsertStmt@0..81
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "T"
  Whitespace@13..14 " "
  SelectStmt@14..79
    Select@14..20 "SELECT"
    Whitespace@20..21 " "
    ResTarget@21..22
      ColumnRef@21..22
        Ident@21..22 "b"
    Ascii44@22..23 ","
    Whitespace@23..24 " "
    ResTarget@24..30
      AExpr@24..30
        ColumnRef@24..25
          Ident@24..25 "b"
        Whitespace@25..26 " "
        Ascii45@26..27 "-"
        Whitespace@27..28 " "
        AConst@28..30
          Iconst@28..30 "10"
    Ascii44@30..31 ","
    Whitespace@31..32 " "
    ResTarget@32..46
      Ascii40@32..33 "("
      TypeCast@33..46
        AExpr@33..39
          ColumnRef@33..34
            Ident@33..34 "b"
          Whitespace@34..35 " "
          Ascii43@35..36 "+"
          Whitespace@36..37 " "
          AConst@37..39
            Iconst@37..39 "10"
        Ascii41@39..40 ")"
        Typecast@40..42 "::"
        TypeName@42..46
          TextP@42..46 "text"
    Whitespace@46..47 " "
    From@47..51 "FROM"
    Whitespace@51..52 " "
    RangeFunction@52..79
      List@52..74
        FuncCall@52..74
          Ident@52..67 "generate_series"
          Ascii40@67..68 "("
          AConst@68..70
            Iconst@68..70 "21"
          Ascii44@70..71 ","
          Whitespace@71..72 " "
          AConst@72..74
            Iconst@72..74 "30"
      Ascii41@74..75 ")"
      Whitespace@75..76 " "
      Alias@76..79
        Ident@76..77 "a"
        Ascii40@77..78 "("
        Ident@78..79 "b"
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

