crates/pg_syntax/tests/snapshots/postgres_regress/float4@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO FLOAT4_TBL(f1) VALUES ('-10e70'::float8);"
---
InsertStmt@0..53
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "FLOAT4_TBL"
  Ascii40@22..23 "("
  ResTarget@23..25
    Ident@23..25 "f1"
  Ascii41@25..26 ")"
  Whitespace@26..27 " "
  SelectStmt@27..51
    Values@27..33 "VALUES"
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..51
      TypeCast@35..51
        AConst@35..43
          Sconst@35..43 "'-10e70'"
        Typecast@43..45 "::"
        TypeName@45..51
          Ident@45..51 "float8"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

