crates/pg_syntax/tests/snapshots/postgres_regress/float4@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO FLOAT4_TBL(f1) VALUES ('-10e-70'::float8);"
---
InsertStmt@0..54
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "FLOAT4_TBL"
  Ascii40@22..23 "("
  ResTarget@23..25
    Ident@23..25 "f1"
  Ascii41@25..26 ")"
  Whitespace@26..27 " "
  SelectStmt@27..52
    Values@27..33 "VALUES"
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..52
      TypeCast@35..52
        AConst@35..44
          Sconst@35..44 "'-10e-70'"
        Typecast@44..46 "::"
        TypeName@46..52
          Ident@46..52 "float8"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

